
[tool.poetry]
name = "proxybroker2"
version = "2.0.0b1"
description = "The New (auto rotate) Proxy [Finder | Checker | Server]. HTTP(S) & SOCKS."
authors = ["BlueT - Matthew Lien - 練喆明 <bluet@bluet.org>", "Denis Constverum <constverum@gmail.com>"]
repository = "https://github.com/bluet/proxybroker2"
homepage = "https://proxybroker2.readthedocs.io/"
documentation = "https://proxybroker2.readthedocs.io/"
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "proxybroker"}]
include = ["proxybroker/data/*.mmdb"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Operating System :: POSIX',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Topic :: Internet :: WWW/HTTP :: Indexing/Search',
    'Topic :: Internet :: Proxy Servers',
    'License :: OSI Approved :: Apache Software License',

]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.12.0"
aiodns = "^3.4.0"
attrs = "^25.3.0"
maxminddb = "^2.7.0"
cachetools = "^5.5.2"
click = "^8.2.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-runner = "^6.0.1"
alabaster = "^1.0.0"
pytest-mock = "^3.14.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
proxybroker = "proxybroker.cli:cli"

[tool.black]
py36 = true
line-length = 88
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv         # virtualenv
    | build
    | dist
  )
)
'''

[tool.ruff]
exclude = ["CRITICAL_FIXES.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
