[project]
name = "proxybroker2"
version = "2.0.0b3"
description = "The New (auto rotate) Proxy [Finder | Checker | Server]. HTTP(S) & SOCKS."
authors = [
    {name = "BlueT - Matthew Lien - 練喆明", email = "bluet@bluet.org"},
    {name = "Denis Constverum", email = "constverum@gmail.com"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<4.0"
# Lower bounds reflect what uv.lock currently resolves (= what's actually
# tested in CI). Pin floors to known-safe versions so snyk doesn't flag
# the constraint range as vulnerable. Notable required floors:
# - click>=8.3.3 fixes SNYK-PYTHON-CLICK-16347201 (HIGH, command injection)
# - aiohttp>=3.13.5 fixes multiple HIGH vulns (SSRF, memory exhaustion,
#   request smuggling)
dependencies = [
    "aiohttp>=3.13.5,<4.0.0",
    "aiodns>=3.6.1,<4.0.0",
    "attrs>=26.1.0,<27.0.0",
    "maxminddb>=2.8.2,<3.0.0",
    "cachetools>=5.5.2,<6.0.0",
    "click>=8.3.3,<9.0.0",
    "pyyaml>=6.0.3,<7.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: Proxy Servers",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://proxybroker2.readthedocs.io/"
Documentation = "https://proxybroker2.readthedocs.io/"
Repository = "https://github.com/bluet/proxybroker2"

[project.scripts]
proxybroker = "proxybroker.cli:cli"

# PEP 735 dev-dependency group. Replaces the legacy
# [tool.poetry.dev-dependencies] section. Activated by `uv sync --dev`.
[dependency-groups]
# Floors reflect uv.lock current resolution (= what's actually tested).
# Same rationale as [project.dependencies] above — keep snyk happy and
# match what CI runs.
dev = [
    "pytest>=8.4.2,<9.0.0",
    "pytest-asyncio>=0.26.0,<1.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pytest-cov>=6.3.0,<7.0.0",
    "alabaster>=1.0.0,<2.0.0",
    # ruff is also pinned in .pre-commit-config.yaml; keep these reasonably
    # in sync. Adding it here lets `uv run ruff ...` work locally and in CI
    # without an extra `uv pip install ruff` step.
    "ruff>=0.15.12,<1.0.0",
]

# Tells poetry-core which dirs ship in the wheel + sdist. Mirrors the prior
# [tool.poetry] packages/include settings.
#
# Note: deliberately keeping [tool.poetry.dependencies] OUT of this file.
# At commit 51ed1f3 (no [tool.poetry.dependencies]) snyk successfully
# parsed [project.dependencies] via its uv preview and reported a
# vulnerability — proving snyk CAN read PEP 621 deps with preview enabled.
# Adding [tool.poetry.dependencies] alongside [project.dependencies]
# caused snyk to error with "Failed to detect issues" instead of using
# either, presumably because two competing dep declarations confuse its
# parser.
[tool.poetry]
packages = [{include = "proxybroker"}]
include = ["proxybroker/data/*.mmdb"]

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.black]
py36 = true
line-length = 88
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv         # virtualenv
    | build
    | dist
  )
)
'''

[tool.ruff]
exclude = ["CRITICAL_FIXES.py"]

[tool.ruff.lint]
# Default selection is E4/E7/E9/F (pycodestyle errors + pyflakes). Add
# PLW1514 to enforce encoding= on text-mode open() calls, preventing the
# locale-encoding data-corruption class of bug caught reactively in PR #210.
# PLW1514 is a preview rule, so preview must be enabled, but
# explicit-preview-rules restricts preview-rule selection to only the rules
# explicitly listed in extend-select.
select = ["E4", "E7", "E9", "F", "PLW1514"]
preview = true
explicit-preview-rules = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
